added features and firebase

--- a/ThreadsTutorials/Utils/Locale/Localizable.xcstrings
+++ b/ThreadsTutorials/Utils/Locale/Localizable.xcstrings
@@ -1,8 +1,171 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "Key" : {
-      "extractionState" : "manual"
+    "" : {
+
+    },
+    " Sign in" : {
+
+    },
+    " Sign Up" : {
+
+    },
+    "2 followers" : {
+
+    },
+    "2h" : {
+
+    },
+    "activity" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Activity"
+          }
+        }
+      }
+    },
+    "Activity" : {
+
+    },
+    "Add Link..." : {
+
+    },
+    "Already have an account?" : {
+
+    },
+    "Bio" : {
+
+    },
+    "Cancel" : {
+
+    },
+    "Charles Leclerc" : {
+
+    },
+    "charles_leclerc" : {
+
+    },
+    "Don't have an account?" : {
+
+    },
+    "Done" : {
+
+    },
+    "Edit Profile" : {
+
+    },
+    "Enter your bio..." : {
+
+    },
+    "Enter your email" : {
+
+    },
+    "Enter your fullname" : {
+
+    },
+    "Enter your password" : {
+
+    },
+    "Enter your username" : {
+
+    },
+    "explore" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Explore"
+          }
+        }
+      }
+    },
+    "feedWiew" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Feed View"
+          }
+        }
+      }
+    },
+    "Follow" : {
+
+    },
+    "Forgot Password?" : {
+
+    },
+    "Formula 1 champion" : {
+
+    },
+    "Formula 1 drive for Scuderia Ferrari" : {
+
+    },
+    "Link" : {
+
+    },
+    "Login" : {
+
+    },
+    "Max Verstappen" : {
+
+    },
+    "maxverstappen1" : {
+
+    },
+    "Name" : {
+
+    },
+    "New Thread" : {
+
+    },
+    "Post" : {
+
+    },
+    "Private profile" : {
+
+    },
+    "profile" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Profile"
+          }
+        }
+      }
+    },
+    "Search" : {
+
+    },
+    "Sign Up" : {
+
+    },
+    "Start a thread..." : {
+
+    },
+    "Thread Title" : {
+
+    },
+    "Threads" : {
+
+    },
+    "uploadThread" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Upload Thread"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
